# evm-address-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pizda.yml
src/: macros.rs  main.rs  utils.rs
