[package]
name = "evm-address-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
dialoguer = "0.11.0"
ethers-signers = "2.0.11"
hex = "0.4.3"
indicatif = "0.17.7"
rand = "0.8.5"
threadpool = "1.8.1"
